--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppThemeLogin">
-        <activity android:name=".HomeActivity"></activity>
-        <activity android:name=".LoginActivity">
+        android:theme="@style/AppThemeRegist">
+
+        <activity android:name=".HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,6 +22,9 @@
         <activity
             android:name=".RegisterActivity"
             android:theme="@style/AppThemeRegist" />
+        <activity
+            android:name=".LoginActivity"
+            android:theme="@style/AppThemeLogin" />
     </application>
 
 </manifest>
