--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppThemeRegist">
-        <activity android:name=".AddPlayersActivity" android:parentActivityName=".PlayersActivity"></activity>
-        <activity android:name=".PlayersActivity" android:parentActivityName=".HomeActivity">
-        </activity>
+        <activity android:name=".RecyclerViewPlayers"></activity>
+        <activity
+            android:name=".AddPlayersActivity"
+            android:parentActivityName=".PlayersActivity" />
+        <activity
+            android:name=".PlayersActivity"
+            android:parentActivityName=".HomeActivity"></activity>
         <activity android:name=".HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
