Recycleview Implementado con itemclickListerner

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,13 +11,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppThemeRegist">
-        <activity android:name=".RecyclerViewPlayers"></activity>
+
+        <activity android:name=".RecyclerViewPlayers" />
+        <activity android:name=".PlayerDetail"></activity>
         <activity
             android:name=".AddPlayersActivity"
             android:parentActivityName=".PlayersActivity" />
         <activity
             android:name=".PlayersActivity"
-            android:parentActivityName=".HomeActivity"></activity>
+            android:parentActivityName=".HomeActivity" />
         <activity android:name=".HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
